inserito risultato con le condizioni

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="total">
                 
                 <h2>Your Price</h2>
-                <h3 class="final-price">50$</h3>
+                <h3 id="final-price">50 $</h3>
 
             </div>
         </footer>
