--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="coupon">
                     <span>Discount Coupon</span>
-                    <span><input type="text" placeholder="insert coupon"></span>
+                    <span><input id ="coupon" value="" type="text" placeholder="insert coupon"></span>
                 </div>
             </section>
 
